# kg-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  STRATEGIC_PLAN.md  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  claude_task.yml  config.yml  feature_request.yml
.github/workflows/: auto-fix.yml  build-knowledge-graph.yml  ci.yml  lint.yml  test.yml
data/: README.md
data/exports/: test_kg_noesis.json
data/hypotheses/: demo_noesis_exploration_tree.json
data/papers/: README.md  papers_index.json
docker/: Dockerfile  docker-compose.ollama-cpu.yml  docker-compose.ollama.yml  docker-compose.yml
docs/: API_SPECIFICATION.md  GITHUB_ACTIONS_GUIDE.md  HYPOTHESIS_GENERATION.md  NEO4J_GUIDE.md  OLLAMA_GUIDE.md  PIPELINE_GUIDE.md  RECURSIVE_HYPOTHESIS_EXPLORATION.md  SEARCH_GUIDE.md  UV_GUIDE.md
examples/: README.md  ingest_paper.py
scripts/: batch_extract_papers.py  build_knowledge_graph.py  create_papers_index.py  demo_noesis_exploration.py  download_arxiv_paper.py  explore_hypotheses_recursive.py  export_from_neo4j.py  generate_hypotheses.py  import_to_neo4j.py  neo4j_manager.py  search_and_download_papers.py  setup_ollama.py  test_noesis_exploration.py
src/kg_builder/: __init__.py
src/kg_builder/config/: __init__.py  schemas.yaml  settings.py
src/kg_builder/extractor/: __init__.py  entity_extractor.py  llm_client.py  relation_extractor.py
src/kg_builder/extractor/prompts/: entity_extraction.txt  relationship_extraction.txt
src/kg_builder/graph/: __init__.py  neo4j_client.py
src/kg_builder/processor/: __init__.py  pdf_extractor.py
src/kg_builder/reasoning/: __init__.py  graph_analytics.py  hypothesis_engine.py  hypothesis_generator.py  link_predictor.py  recursive_alchemist.py
src/kg_builder/reasoning/prompts/: hypothesis_generation.txt
src/kg_builder/sdk/: client.py
src/kg_builder/search/: __init__.py  arxiv_search.py  llm_filter.py
tests/: __init__.py  conftest.py  test_config.py  test_extractor.py
tests/reasoning/: __init__.py  test_graph_analytics.py  test_hypothesis_generator.py  test_link_predictor.py
tests/test_extractor/: __init__.py  test_entity_extractor.py  test_llm_client.py
tests/test_graph/: __init__.py  test_neo4j_client.py
tests/test_processor/: __init__.py  test_pdf_extractor.py
tests/test_search/: test_arxiv_search.py
