[project]
name = "kg-builder"
version = "0.1.0"
description = "Knowledge Graph Builder for Research Papers using Neo4j and LLMs"
authors = [
    {name = "KG Builder Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["knowledge-graph", "neo4j", "llm", "research-papers", "graph-reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "neo4j>=5.16.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.8.0",
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "networkx>=3.2.0",
    "python-louvain>=0.16",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "arxiv>=2.1.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "kg-builder[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/kg-builder"
Documentation = "https://kg-builder.readthedocs.io"
Repository = "https://github.com/yourusername/kg-builder"
Issues = "https://github.com/yourusername/kg-builder/issues"

[project.scripts]
kg-builder = "kg_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_builder"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=kg_builder --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
# UV configuration for modern Python package management
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

# UV managed mode - use uv for all package operations
managed = true
